# aiseg2-bridge

./: .env.example  .gitignore  Dockerfile  README.md  aiseg2_clean.py  aiseg2_publish.py  docker-compose.yaml.example  hacs.json  lint-check.sh  lint-fix.sh  logo.psd  main.py  pyproject.toml  setup-hooks.sh
.githooks/: pre-commit  pre-push
.github/workflows/: README.md  docker-publish.yml  release.yml
custom_components/aiseg2_bridge/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/aiseg2_bridge/translations/: en.json
custom_components/aiseg2mqtt/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/aiseg2mqtt/translations/: ja.json
docker/: .dockerignore  aiseg2_clean.py
