[project]
name = "aiseg2mqtt"
version = "0.1.0"
description = "AISEG2 to MQTT bridge for Home Assistant integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.0",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[tool.setuptools.packages.find]
where = ["docker"]  # Docker実行用コードの場所
